<resources>
    <string name="app_name">NewProjeckt</string>
    <string name="onBoarding_title">Sweets Ordering App</string>
    <string name="onBoarding_description">Order your favorite desert \n Here!</string>
    <string name="omBoarding_get_start">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flavoured_cupcakes_with_special_icing">Flavoured cupcakes with special icing</string>
    <string name="cup_cake">Cup Cake</string>
    <string name="_5">$5</string>
    <string name="all">All</string>
    <string name="sweets">Sweets</string>
    <string name="cakes">Cakes</string>
    <string name="candy">Candy</string>
    <string name="hint">$</string>
    <string name="donuts">Donuts</string>
    <string name="about_this_product">About this product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="five">$5</string>
    <string name="basket">Basket</string>
</resources>