<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.newprojeckt.presentation.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/macarons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/donuts"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:text="@string/flavoured_cupcakes_with_special_icing"
        app:layout_constraintEnd_toStartOf="@+id/cardFoodPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="UnknownId" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardFoodPrice"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/onBoarding_btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:shapeAppearanceOverlay="@style/CardView">

        <TextView
            android:id="@+id/textHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/about_this_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardFoodPrice" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCart"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/on_boarding_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_to_cart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>