<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:text="@string/cakes"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"
                android:text="@string/flavoured_cupcakes_with_special_icing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/_5"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green_on_boarding"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgIv"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="end"
            android:layout_margin="32dp"
            android:src="@drawable/cake" />

        <ImageView
            android:id="@+id/deleteCard"
            android:layout_width="50dp"
            android:layout_height="33dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/delete_svgrepo_com" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>